--- a/kafka/spring-cloud-stream-kafka-source/pom.xml
+++ b/kafka/spring-cloud-stream-kafka-source/pom.xml
@@ -6,13 +6,14 @@
         <artifactId>spring-cloud-stream</artifactId>
         <groupId>com.jinternals</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-cloud-stream-kafka-sink</artifactId>
+    <artifactId>spring-cloud-stream-kafka-source</artifactId>
 
-
+    <packaging>jar</packaging>
 
     <dependencies>
 
@@ -36,13 +37,23 @@
             <artifactId>spring-cloud-starter-stream-kafka</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -50,6 +61,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludeDevtools>false</excludeDevtools>
+                </configuration>
             </plugin>
 
             <plugin>
