--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <modules>
         <module>kafka/spring-cloud-stream-kafka-source</module>
         <module>kafka/spring-cloud-stream-kafka-sink</module>
+        <module>rabbitmq/spring-cloud-stream-rabbitmq-source</module>
+        <module>rabbitmq/spring-cloud-stream-rabbitmq-sink</module>
     </modules>
 
     <packaging>pom</packaging>
