--- a/rabbitmq/spring-cloud-stream-rabbitmq-source/pom.xml
+++ b/rabbitmq/spring-cloud-stream-rabbitmq-source/pom.xml
@@ -48,6 +48,11 @@
             <optional>true</optional>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-test-support</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
