--- a/rabbitmq/spring-cloud-stream-rabbitmq-sink/pom.xml
+++ b/rabbitmq/spring-cloud-stream-rabbitmq-sink/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>2.0.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
