Added admin support in rabbit source application

--- a/rabbitmq/spring-cloud-stream-rabbitmq-sink/src/main/resources/application.yml
+++ b/rabbitmq/spring-cloud-stream-rabbitmq-sink/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 server:
   port: 8013
 
+
 spring:
+  application:
+    name: spring-cloud-stream-rabbitmq-sink
   cloud:
     stream:
       bindings:
