--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
         <spring.boot.version>2.0.4.RELEASE</spring.boot.version>
         <spring.cloud.version>Finchley.SR1</spring.cloud.version>
+        <spring.cloud.admin.version>2.0.2</spring.cloud.admin.version>
 
         <docker.image.prefix>jinternals</docker.image.prefix>
         <plugin.docker.version>0.4.13</plugin.docker.version>
@@ -52,6 +53,17 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-server</artifactId>
+                <version>${spring.cloud.admin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-client</artifactId>
+                <version>${spring.cloud.admin.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
