--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
 
         <kotlin.version>1.2.41</kotlin.version>
 
-        <spring.boot.version>2.0.4.RELEASE</spring.boot.version>
-        <spring.cloud.version>Finchley.SR1</spring.cloud.version>
-        <spring.cloud.admin.version>2.0.2</spring.cloud.admin.version>
+        <spring.boot.version>2.1.3.RELEASE</spring.boot.version>
+        <spring.cloud.version>Greenwich.RELEASE</spring.cloud.version>
+        <spring.cloud.admin.version>2.1.3</spring.cloud.admin.version>
 
         <docker.image.prefix>jinternals</docker.image.prefix>
         <plugin.docker.version>0.4.13</plugin.docker.version>
